# cursedkeeb

./: .gitignore  Pipfile  README.md  keycap.py  shell.nix
.github/scripts/: espup_nixos_fix.sh
firmware/: Cargo.toml  Makefile.toml  README.md  build.rs  keyboard.toml  partitions.csv  sdkconfig.defaults  vial.json
firmware/.cargo/: config.toml
firmware/src/: main.rs
