[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
rmk = { path = "../../rmk/rmk", default-features = false, features = [
	# rmk = { git = "https://github.com/HaoboGu/rmk", version = "0.4.1", features = [
	"async_matrix",
	"nrf52840_ble",
	"mcp23017",
] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embassy-time = { version = "0.3", features = ["tick-hz-32_768", "defmt"] }
embassy-nrf = { version = "0.2.0", features = [
	"defmt",
	"nrf52840",
	"time-driver-rtc1",
	"gpiote",
	"unstable-pac",
	"nfc-pins-as-gpio",
	"time",
] }
embassy-executor = { version = "0.6", features = [
	"defmt",
	"task-arena-size-32768",
	"arch-cortex-m",
	"executor-thread",
	"integrated-timers",
] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-rtt"] }
embedded-hal = "1.0.0"
heapless = "0.8.0"
embassy-sync = "0.6.0"
port-expander = "0.6.3"

[[bin]]
name = "cursedkeeb"
test = false
bench = false
path = "src/main.rs"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"

[build-dependencies]
const-gen = "1.6.5"
json = "0.12.4"
xz2 = "0.1.7"
