[package]
name = "firmware"
version = "0.1.0"
edition = "2021"

[dependencies]
# rmk = { path = "../../rmk/rmk", default-features = false, features = [
rmk = { git = "https://github.com/HaoboGu/rmk", version = "0.4.2", default-features = false, features = [
    # "async_matrix",
    "esp32s3_ble",
] }

defmt = "0.3"
esp32-nimble = { version = "0.8" }
embassy-time = { version = "0.3.0", features = ["defmt", "generic-queue-8"] }
esp-println = { version = "0.11", features = ["esp32s3", "defmt-espflash"] }
esp-idf-svc = { version = "0.49", default-features = false, features = [
    "std",
    "alloc",
    "binstart",
    "embassy-sync",
    "critical-section",
    "embassy-time-driver",
    "native",
] }

[[bin]]
name = "cursedkeeb"
test = false
bench = false
path = "src/main.rs"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 3          # esp-wifi should be built with opt-level 2 or 3
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = 3           # optimize for binary size
overflow-checks = false
lto = "fat"

[build-dependencies]
const-gen = "1.6.5"
embuild = "0.32"
json = "0.12.4"
xz2 = "0.1.7"
